<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource">

    <item
        android:id="@+id/delete"
        android:title="@string/edititem_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save"
        android:title="@string/edititem_save"
        android:icon="@drawable/ic_check_white_24dp"
        app:showAsAction="ifRoom" />

</menu>